--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,23 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <title> <% if (title) { %> <%= title %> <% } %> </title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </head>
 
 <body class=" ">
-    <div>
-        <div
-            style="display: flex; justify-content: space-between; align-items: center; margin-left: 80px; margin-right: 180px;">
+    <div class="container">
+        <div style="display: flex; justify-content: space-between; align-items: center;">
             <h1 class="">TODO List</h1>
-            <input type="button" value="Add Todo" onclick="addTodo()">
+            <input type="button" value="Add Todo" class="add-todo" onclick="addTodo()">
         </div>
-        <div style="height: 80vh; width: 80vw;">
-            <div id="todo-list"
-                style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+        <table>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Title</th>
+                    <th>Description</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody id="todo-list">
                 <!-- Todo items will be populated here using JS -->
-            </div>
-        </div>
+            </tbody>
+        </table>
     </div>
+
     <script>
+
         function deleteTodo(id, index) {
             fetch('/api/todo/' + id, {
                 method: 'DELETE',
@@ -32,18 +41,15 @@
                     if (response.ok) {
                         const todoToRemove = document.getElementById('todo-' + id);
                         todoToRemove.remove();
-                        console.log(todoToRemove)
-                        alert("TODO removed successfully.")
                     }
                 })
                 .catch(error => {
                     console.error('Error deleting TODO:', error);
                 });
-
         }
 
-        function editTodo(id) {
-
+        function editTodo(todo) {
+            postForm(`/update/${todo.id}`, todo, "post")
         }
 
         function addTodo() {
@@ -55,41 +61,94 @@
             todoList.innerHTML = '';
             let index = 1;
             todos.forEach(todo => {
-                const div = document.createElement('div');
-                div.style.display = "flex";
-                div.style.margin = "20px";
-                div.id = 'todo-' + todo.id;
+                const tr = document.createElement('tr');
+                tr.className = 'fade-in';
+                tr.id = 'todo-' + todo.id;
 
-                const todoId = document.createElement('div');
-                todoId.textContent = index;
-                todoId.style.marginLeft = "10px";
-                todoId.style.marginRight = "10px";
-                div.appendChild(todoId)
+                const tdId = document.createElement('td');
+                tdId.textContent = index;
+                tr.appendChild(tdId);
 
-                const todotext = document.createElement('div');
-                todotext.textContent = todo.title;
-                div.appendChild(todotext);
+                const tdTitle = document.createElement('td');
+                tdTitle.textContent = todo.title;
+                tr.appendChild(tdTitle);
 
-                const todoDescription = document.createElement('div');
-                todoDescription.textContent = todo.description;
-                todoDescription.style.marginLeft = "10px";
-                div.appendChild(todoDescription);
+                const tdDescription = document.createElement('td');
+                tdDescription.textContent = todo.description;
+                tr.appendChild(tdDescription);
 
-                const eiditButton = document.createElement('button');
-                eiditButton.textContent = 'Edit';
-                eiditButton.style.marginLeft = "10px";
-                eiditButton.addEventListener('click', () => editTodo(todo.id));
-                div.appendChild(eiditButton);
+                const tdActions = document.createElement('td');
+                const editButton = document.createElement('button');
+                editButton.textContent = 'Edit';
+                editButton.className = 'todo-edit-button';
+                editButton.addEventListener('click', () => editTodo(todo));
+                tdActions.appendChild(editButton);
 
                 const deleteButton = document.createElement('button');
                 deleteButton.textContent = 'Delete';
-                deleteButton.style.marginLeft = "10px";
-                deleteButton.addEventListener('click', () => deleteTodo(todo.id));
-                div.appendChild(deleteButton);
+                deleteButton.className = 'todo-delete-button';
+                deleteButton.addEventListener('click', () => {
+                    Swal.fire({
+                        title: 'Are you sure want to delete todo?',
+                        text: "You won't be able to revert this!",
+                        icon: 'warning',
+                        showCancelButton: true,
+                        confirmButtonColor: "#3085d6",
+                        cancelButtonColor: "#d33",
+                        confirmButtonText: "Yes, delete it!"
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            deleteTodo(todo.id);
+                            Swal.fire({
+                                title: "Deleted!",
+                                text: "TODO has been deleted.",
+                                icon: "success"
+                            });
+                            return;
+                        }
+                    });
+                });
+                tdActions.appendChild(deleteButton);
 
-                todoList.appendChild(div);
+                tr.appendChild(tdActions);
+
+                todoList.appendChild(tr);
                 index++;
             });
+        }
+
+        function submitForm() {
+            console.log(document.forms)
+            const form = document.forms[ "newForm" ];
+
+
+        }
+        function postForm(path, params, method) {
+            method = method || 'post';
+
+            var form = document.createElement('form');
+            form.setAttribute('method', method);
+            form.setAttribute('action', path);
+            form.setAttribute("name", "newForm");
+            // form.setAttribute('action', submitForm());
+
+            for (var key in params) {
+                if (params.hasOwnProperty(key)) {
+                    var hiddenField = document.createElement('input');
+                    hiddenField.setAttribute('type', 'hidden');
+                    hiddenField.setAttribute('name', key);
+                    hiddenField.setAttribute('value', params[ key ]);
+
+                    form.appendChild(hiddenField);
+                }
+            }
+            // console.log(form)
+
+            document.body.appendChild(form);
+            form.addEventListener("submit", function (event) {
+                event.preventDefault();
+            });
+            form.submit();
         }
 
         function fetchTodos() {
