--- a/public/css/register.css
+++ b/public/css/register.css
@@ -66,7 +66,8 @@ input[type="button"] {
     /* border-radius: 8px; */
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="password"] {
     outline: none;
     border: none;
     background-color: #fdffcd;
@@ -74,7 +75,10 @@ input[type="text"] {
 }
 
 .submitBtn {
+    /* m-[20px] p-[15px] w-[150px] bg-[green] rounded-[8px] text-[white] */
     margin-top: 20px;
+    /* padding: 15px; */
+    /* width: 150px; */
     border: none;
     background-color: #ffcab0;
     background-color: #ffebbb;
